@@ -31,8 +31,8 @@ public class VisualizationState
     private PickTimeLineManager pickTimeLineManager;
 
     private NetworkElementType pickedElementType;
-    private NetworkElement pickedElementNotFR;
-    private Pair<Demand, Link> pickedElementFR;
+    private List<? extends NetworkElement> pickedElementNotFR;
+    private List<Pair<Demand, Link>> pickedElementFR;
 
     private boolean showInCanvasNodeNames;
     private boolean showInCanvasLinkLabels;
@@ -763,12 +763,12 @@ public class VisualizationState
         return pickedElementType;
     }
 
-    public NetworkElement getPickedNetworkElement()
+    public List<? extends NetworkElement> getPickedNetworkElement()
     {
         return pickedElementNotFR;
     }
 
-    public Pair<Demand, Link> getPickedForwardingRule()
+    public List<Pair<Demand, Link>> getPickedForwardingRule()
     {
         return pickedElementFR;
     }
@@ -778,415 +778,445 @@ public class VisualizationState
         resetPickedState();
         this.pickedElementType = NetworkElementType.LAYER;
         this.pickedElementFR = null;
-        this.pickedElementNotFR = pickedLayer;
+        this.pickedElementNotFR = Arrays.asList(pickedLayer);
         pickTimeLineManager.addElement(this.getNetPlan(), pickedLayer);
     }
 
-    public void pickDemand(Demand pickedDemand)
+    public void pickDemand(List<Demand> pickedDemands)
     {
         resetPickedState();
         this.pickedElementType = NetworkElementType.DEMAND;
         this.pickedElementFR = null;
-        this.pickedElementNotFR = pickedDemand;
-        pickTimeLineManager.addElement(this.getNetPlan(), pickedDemand);
-
-        final boolean isDemandLayerVisibleInTheCanvas = isLayerVisibleInCanvas(pickedDemand.getLayer());
-        final GUINode gnOrigin = getCanvasAssociatedGUINode(pickedDemand.getIngressNode(), pickedDemand.getLayer());
-        final GUINode gnDestination = getCanvasAssociatedGUINode(pickedDemand.getEgressNode(), pickedDemand.getLayer());
-        Pair<Set<Link>, Set<Link>> thisLayerPropagation = null;
-        if (showInCanvasThisLayerPropagation && isDemandLayerVisibleInTheCanvas)
+        this.pickedElementNotFR = pickedDemands;
+        if (pickedDemands.size() == 1) pickTimeLineManager.addElement(this.getNetPlan(), pickedDemands.get(0));
+        
+        for (Demand pickedDemand : pickedDemands)
         {
-            thisLayerPropagation = pickedDemand.getLinksThisLayerPotentiallyCarryingTraffic(false);
-            final Set<Link> linksPrimary = thisLayerPropagation.getFirst();
-            final Set<Link> linksBackup = thisLayerPropagation.getSecond();
-            final Set<Link> linksPrimaryAndBackup = Sets.intersection(linksPrimary, linksBackup);
-            drawColateralLinks(Sets.difference(linksPrimary, linksPrimaryAndBackup), VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
-            drawColateralLinks(Sets.difference(linksBackup, linksPrimaryAndBackup), VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_BACKUP);
-            drawColateralLinks(linksPrimaryAndBackup, VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_BACKUPANDPRIMARY);
-        }
-        if (showInCanvasLowerLayerPropagation && (this.getNetPlan().getNumberOfLayers() > 1))
-        {
-            if (thisLayerPropagation == null)
-                thisLayerPropagation = pickedDemand.getLinksThisLayerPotentiallyCarryingTraffic(false);
-            final Pair<Set<Demand>, Set<Pair<MulticastDemand, Node>>> downLayerInfoPrimary = getDownCoupling(thisLayerPropagation.getFirst());
-            final Pair<Set<Demand>, Set<Pair<MulticastDemand, Node>>> downLayerInfoBackup = getDownCoupling(thisLayerPropagation.getSecond());
-            final InterLayerPropagationGraph ipgPrimary = new InterLayerPropagationGraph(downLayerInfoPrimary.getFirst(), null, downLayerInfoPrimary.getSecond(), false, false);
-            final InterLayerPropagationGraph ipgBackup = new InterLayerPropagationGraph(downLayerInfoBackup.getFirst(), null, downLayerInfoBackup.getSecond(), false, false);
-            final Set<Link> linksPrimary = ipgPrimary.getLinksInGraph();
-            final Set<Link> linksBackup = ipgBackup.getLinksInGraph();
-            final Set<Link> linksPrimaryAndBackup = Sets.intersection(linksPrimary, linksBackup);
-            final Set<Link> linksOnlyPrimary = Sets.difference(linksPrimary, linksPrimaryAndBackup);
-            final Set<Link> linksOnlyBackup = Sets.difference(linksBackup, linksPrimaryAndBackup);
-            drawColateralLinks(linksOnlyPrimary, VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
-            drawDownPropagationInterLayerLinks(linksOnlyPrimary, VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
-            drawColateralLinks(linksOnlyBackup, VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_BACKUP);
-            drawDownPropagationInterLayerLinks(linksOnlyBackup, VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_BACKUP);
-            drawColateralLinks(linksPrimaryAndBackup, VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_BACKUPANDPRIMARY);
-            drawDownPropagationInterLayerLinks(linksPrimaryAndBackup, VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_BACKUPANDPRIMARY);
-        }
-        if (showInCanvasUpperLayerPropagation && (this.getNetPlan().getNumberOfLayers() > 1) && pickedDemand.isCoupled())
-        {
-            final InterLayerPropagationGraph ipg = new InterLayerPropagationGraph(null, Sets.newHashSet(pickedDemand.getCoupledLink()), null, true, false);
-            drawColateralLinks(ipg.getLinksInGraph(), VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
-            drawDownPropagationInterLayerLinks(ipg.getLinksInGraph(), VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
-        }
-        /* Picked link the last, so overrides the rest */
-        if (isDemandLayerVisibleInTheCanvas)
-        {
-            gnOrigin.setBorderPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_ORIGINFLOW);
-            gnOrigin.setFillPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_ORIGINFLOW);
-            gnDestination.setBorderPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_ENDFLOW);
-            gnDestination.setFillPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_ENDFLOW);
-        }
-    }
-
-    public void pickSRG(SharedRiskGroup pickedSRG)
-    {
-        resetPickedState();
-        this.pickedElementType = NetworkElementType.SRG;
-        this.pickedElementFR = null;
-        this.pickedElementNotFR = pickedSRG;
-        pickTimeLineManager.addElement(this.getNetPlan(), pickedSRG);
-
-        final Set<Link> allAffectedLinks = pickedSRG.getAffectedLinksAllLayers();
-        Map<Link, Triple<Map<Demand, Set<Link>>, Map<Demand, Set<Link>>, Map<Pair<MulticastDemand, Node>, Set<Link>>>> thisLayerPropInfo = new HashMap<>();
-        if (showInCanvasThisLayerPropagation)
-        {
-            for (Link link : allAffectedLinks)
-            {
-                thisLayerPropInfo.put(link, link.getLinksThisLayerPotentiallyCarryingTrafficTraversingThisLink(false));
-                final Set<Link> linksPrimary = thisLayerPropInfo.get(link).getFirst().values().stream().flatMap(set -> set.stream()).collect(Collectors.toSet());
-                final Set<Link> linksBackup = thisLayerPropInfo.get(link).getSecond().values().stream().flatMap(set -> set.stream()).collect(Collectors.toSet());
-                final Set<Link> linksMulticast = thisLayerPropInfo.get(link).getThird().values().stream().flatMap(set -> set.stream()).collect(Collectors.toSet());
-                drawColateralLinks(Sets.union(Sets.union(linksPrimary, linksBackup), linksMulticast), VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_AFFECTEDFAILURES);
-            }
-        }
-        if (showInCanvasLowerLayerPropagation && (this.getNetPlan().getNumberOfLayers() > 1))
-        {
-            final Set<Link> affectedCoupledLinks = allAffectedLinks.stream().filter(e -> e.isCoupled()).collect(Collectors.toSet());
-            final Pair<Set<Demand>, Set<Pair<MulticastDemand, Node>>> couplingInfo = getDownCoupling(affectedCoupledLinks);
-            final InterLayerPropagationGraph ipg = new InterLayerPropagationGraph(couplingInfo.getFirst(), null, couplingInfo.getSecond(), false, false);
-            final Set<Link> lowerLayerLinks = ipg.getLinksInGraph();
-            drawColateralLinks(lowerLayerLinks, VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_AFFECTEDFAILURES);
-            drawDownPropagationInterLayerLinks(lowerLayerLinks, VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_AFFECTEDFAILURES);
-        }
-        if (showInCanvasUpperLayerPropagation && (this.getNetPlan().getNumberOfLayers() > 1))
-        {
-            final Set<Demand> demandsPrimaryAndBackup = new HashSet<>();
-            final Set<Pair<MulticastDemand, Node>> demandsMulticast = new HashSet<>();
-            for (Link link : allAffectedLinks)
-            {
-                final Triple<Map<Demand, Set<Link>>, Map<Demand, Set<Link>>, Map<Pair<MulticastDemand, Node>, Set<Link>>> thisLinkInfo =
-                        showInCanvasThisLayerPropagation ? thisLayerPropInfo.get(link) : link.getLinksThisLayerPotentiallyCarryingTrafficTraversingThisLink(false);
-                demandsPrimaryAndBackup.addAll(Sets.union(thisLinkInfo.getFirst().keySet(), thisLinkInfo.getSecond().keySet()));
-                demandsMulticast.addAll(thisLinkInfo.getThird().keySet());
-            }
-            final Set<Link> coupledUpperLinks = getUpCoupling(demandsPrimaryAndBackup, demandsMulticast);
-            final InterLayerPropagationGraph ipg = new InterLayerPropagationGraph(null, coupledUpperLinks, null, true, false);
-            drawColateralLinks(ipg.getLinksInGraph(), VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_AFFECTEDFAILURES);
-            drawDownPropagationInterLayerLinks(ipg.getLinksInGraph(), VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_AFFECTEDFAILURES);
-        }
-        /* Picked link the last, so overrides the rest */
-        for (Link link : allAffectedLinks)
-        {
-            final GUILink gl = getCanvasAssociatedGUILink(link);
-            if (gl == null) continue;
-            gl.setHasArrow(true);
-            setCurrentDefaultEdgeStroke (gl , VisualizationConstants.DEFAULT_REGGUILINK_EDGESTROKE_PICKED , VisualizationConstants.DEFAULT_REGGUILINK_EDGESTROKE_PICKED);
-            final Paint color = link.isDown() ? VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_FAILED : VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_FAILED;
-            gl.setEdgeDrawPaint(color);
-            gl.setShownSeparated(true);
-        }
-        for (Node node : pickedSRG.getNodes())
-        {
-            for (GUINode gn : getCanvasVerticallyStackedGUINodes(node))
-            {
-                gn.setBorderPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_FAILED);
-                gn.setFillPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_FAILED);
-            }
-        }
-    }
-
-    public void pickMulticastDemand(MulticastDemand pickedDemand)
-    {
-        resetPickedState();
-        this.pickedElementType = NetworkElementType.MULTICAST_DEMAND;
-        this.pickedElementFR = null;
-        this.pickedElementNotFR = pickedDemand;
-        pickTimeLineManager.addElement(this.getNetPlan(), pickedDemand);
-
-        final boolean isDemandLayerVisibleInTheCanvas = isLayerVisibleInCanvas(pickedDemand.getLayer());
-        final GUINode gnOrigin = getCanvasAssociatedGUINode(pickedDemand.getIngressNode(), pickedDemand.getLayer());
-        Set<Link> linksThisLayer = null;
-        for (Node egressNode : pickedDemand.getEgressNodes())
-        {
-            final GUINode gnDestination = getCanvasAssociatedGUINode(egressNode, pickedDemand.getLayer());
+            final boolean isDemandLayerVisibleInTheCanvas = isLayerVisibleInCanvas(pickedDemand.getLayer());
+            final GUINode gnOrigin = getCanvasAssociatedGUINode(pickedDemand.getIngressNode(), pickedDemand.getLayer());
+            final GUINode gnDestination = getCanvasAssociatedGUINode(pickedDemand.getEgressNode(), pickedDemand.getLayer());
+            Pair<Set<Link>, Set<Link>> thisLayerPropagation = null;
             if (showInCanvasThisLayerPropagation && isDemandLayerVisibleInTheCanvas)
             {
-                linksThisLayer = pickedDemand.getLinksThisLayerPotentiallyCarryingTraffic(egressNode, false);
-                drawColateralLinks(linksThisLayer, VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
+                thisLayerPropagation = pickedDemand.getLinksThisLayerPotentiallyCarryingTraffic(false);
+                final Set<Link> linksPrimary = thisLayerPropagation.getFirst();
+                final Set<Link> linksBackup = thisLayerPropagation.getSecond();
+                final Set<Link> linksPrimaryAndBackup = Sets.intersection(linksPrimary, linksBackup);
+                drawColateralLinks(Sets.difference(linksPrimary, linksPrimaryAndBackup), VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
+                drawColateralLinks(Sets.difference(linksBackup, linksPrimaryAndBackup), VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_BACKUP);
+                drawColateralLinks(linksPrimaryAndBackup, VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_BACKUPANDPRIMARY);
             }
             if (showInCanvasLowerLayerPropagation && (this.getNetPlan().getNumberOfLayers() > 1))
             {
-                if (linksThisLayer == null)
-                    linksThisLayer = pickedDemand.getLinksThisLayerPotentiallyCarryingTraffic(egressNode, false);
-                final Pair<Set<Demand>, Set<Pair<MulticastDemand, Node>>> downLayerInfo = getDownCoupling(linksThisLayer);
-                final InterLayerPropagationGraph ipg = new InterLayerPropagationGraph(downLayerInfo.getFirst(), null, downLayerInfo.getSecond(), false, false);
-                final Set<Link> linksLowerLayers = ipg.getLinksInGraph();
-                drawColateralLinks(linksLowerLayers, VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
-                drawDownPropagationInterLayerLinks(linksLowerLayers, VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
+                if (thisLayerPropagation == null)
+                    thisLayerPropagation = pickedDemand.getLinksThisLayerPotentiallyCarryingTraffic(false);
+                final Pair<Set<Demand>, Set<Pair<MulticastDemand, Node>>> downLayerInfoPrimary = getDownCoupling(thisLayerPropagation.getFirst());
+                final Pair<Set<Demand>, Set<Pair<MulticastDemand, Node>>> downLayerInfoBackup = getDownCoupling(thisLayerPropagation.getSecond());
+                final InterLayerPropagationGraph ipgPrimary = new InterLayerPropagationGraph(downLayerInfoPrimary.getFirst(), null, downLayerInfoPrimary.getSecond(), false, false);
+                final InterLayerPropagationGraph ipgBackup = new InterLayerPropagationGraph(downLayerInfoBackup.getFirst(), null, downLayerInfoBackup.getSecond(), false, false);
+                final Set<Link> linksPrimary = ipgPrimary.getLinksInGraph();
+                final Set<Link> linksBackup = ipgBackup.getLinksInGraph();
+                final Set<Link> linksPrimaryAndBackup = Sets.intersection(linksPrimary, linksBackup);
+                final Set<Link> linksOnlyPrimary = Sets.difference(linksPrimary, linksPrimaryAndBackup);
+                final Set<Link> linksOnlyBackup = Sets.difference(linksBackup, linksPrimaryAndBackup);
+                drawColateralLinks(linksOnlyPrimary, VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
+                drawDownPropagationInterLayerLinks(linksOnlyPrimary, VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
+                drawColateralLinks(linksOnlyBackup, VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_BACKUP);
+                drawDownPropagationInterLayerLinks(linksOnlyBackup, VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_BACKUP);
+                drawColateralLinks(linksPrimaryAndBackup, VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_BACKUPANDPRIMARY);
+                drawDownPropagationInterLayerLinks(linksPrimaryAndBackup, VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_BACKUPANDPRIMARY);
             }
             if (showInCanvasUpperLayerPropagation && (this.getNetPlan().getNumberOfLayers() > 1) && pickedDemand.isCoupled())
             {
-                final Set<Link> upCoupledLink = getUpCoupling(null, Collections.singleton(Pair.of(pickedDemand, egressNode)));
-                final InterLayerPropagationGraph ipg = new InterLayerPropagationGraph(null, upCoupledLink, null, true, false);
+                final InterLayerPropagationGraph ipg = new InterLayerPropagationGraph(null, Sets.newHashSet(pickedDemand.getCoupledLink()), null, true, false);
                 drawColateralLinks(ipg.getLinksInGraph(), VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
                 drawDownPropagationInterLayerLinks(ipg.getLinksInGraph(), VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
             }
             /* Picked link the last, so overrides the rest */
             if (isDemandLayerVisibleInTheCanvas)
             {
+                gnOrigin.setBorderPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_ORIGINFLOW);
+                gnOrigin.setFillPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_ORIGINFLOW);
                 gnDestination.setBorderPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_ENDFLOW);
                 gnDestination.setFillPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_ENDFLOW);
             }
         }
-        /* Picked link the last, so overrides the rest */
-        if (isDemandLayerVisibleInTheCanvas)
+        
+    }
+
+    public void pickSRG(List<SharedRiskGroup> pickedSRGs)
+    {
+        resetPickedState();
+        this.pickedElementType = NetworkElementType.SRG;
+        this.pickedElementFR = null;
+        this.pickedElementNotFR = pickedSRGs;
+        if (pickedSRGs.size() == 1)pickTimeLineManager.addElement(this.getNetPlan(), pickedSRGs.get(0));
+
+        for (SharedRiskGroup pickedSRG : pickedSRGs)
         {
-            gnOrigin.setBorderPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_ORIGINFLOW);
-            gnOrigin.setFillPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_ORIGINFLOW);
+            final Set<Link> allAffectedLinks = pickedSRG.getAffectedLinksAllLayers();
+            Map<Link, Triple<Map<Demand, Set<Link>>, Map<Demand, Set<Link>>, Map<Pair<MulticastDemand, Node>, Set<Link>>>> thisLayerPropInfo = new HashMap<>();
+            if (showInCanvasThisLayerPropagation)
+            {
+                for (Link link : allAffectedLinks)
+                {
+                    thisLayerPropInfo.put(link, link.getLinksThisLayerPotentiallyCarryingTrafficTraversingThisLink(false));
+                    final Set<Link> linksPrimary = thisLayerPropInfo.get(link).getFirst().values().stream().flatMap(set -> set.stream()).collect(Collectors.toSet());
+                    final Set<Link> linksBackup = thisLayerPropInfo.get(link).getSecond().values().stream().flatMap(set -> set.stream()).collect(Collectors.toSet());
+                    final Set<Link> linksMulticast = thisLayerPropInfo.get(link).getThird().values().stream().flatMap(set -> set.stream()).collect(Collectors.toSet());
+                    drawColateralLinks(Sets.union(Sets.union(linksPrimary, linksBackup), linksMulticast), VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_AFFECTEDFAILURES);
+                }
+            }
+            if (showInCanvasLowerLayerPropagation && (this.getNetPlan().getNumberOfLayers() > 1))
+            {
+                final Set<Link> affectedCoupledLinks = allAffectedLinks.stream().filter(e -> e.isCoupled()).collect(Collectors.toSet());
+                final Pair<Set<Demand>, Set<Pair<MulticastDemand, Node>>> couplingInfo = getDownCoupling(affectedCoupledLinks);
+                final InterLayerPropagationGraph ipg = new InterLayerPropagationGraph(couplingInfo.getFirst(), null, couplingInfo.getSecond(), false, false);
+                final Set<Link> lowerLayerLinks = ipg.getLinksInGraph();
+                drawColateralLinks(lowerLayerLinks, VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_AFFECTEDFAILURES);
+                drawDownPropagationInterLayerLinks(lowerLayerLinks, VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_AFFECTEDFAILURES);
+            }
+            if (showInCanvasUpperLayerPropagation && (this.getNetPlan().getNumberOfLayers() > 1))
+            {
+                final Set<Demand> demandsPrimaryAndBackup = new HashSet<>();
+                final Set<Pair<MulticastDemand, Node>> demandsMulticast = new HashSet<>();
+                for (Link link : allAffectedLinks)
+                {
+                    final Triple<Map<Demand, Set<Link>>, Map<Demand, Set<Link>>, Map<Pair<MulticastDemand, Node>, Set<Link>>> thisLinkInfo =
+                            showInCanvasThisLayerPropagation ? thisLayerPropInfo.get(link) : link.getLinksThisLayerPotentiallyCarryingTrafficTraversingThisLink(false);
+                    demandsPrimaryAndBackup.addAll(Sets.union(thisLinkInfo.getFirst().keySet(), thisLinkInfo.getSecond().keySet()));
+                    demandsMulticast.addAll(thisLinkInfo.getThird().keySet());
+                }
+                final Set<Link> coupledUpperLinks = getUpCoupling(demandsPrimaryAndBackup, demandsMulticast);
+                final InterLayerPropagationGraph ipg = new InterLayerPropagationGraph(null, coupledUpperLinks, null, true, false);
+                drawColateralLinks(ipg.getLinksInGraph(), VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_AFFECTEDFAILURES);
+                drawDownPropagationInterLayerLinks(ipg.getLinksInGraph(), VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_AFFECTEDFAILURES);
+            }
+            /* Picked link the last, so overrides the rest */
+            for (Link link : allAffectedLinks)
+            {
+                final GUILink gl = getCanvasAssociatedGUILink(link);
+                if (gl == null) continue;
+                gl.setHasArrow(true);
+                setCurrentDefaultEdgeStroke (gl , VisualizationConstants.DEFAULT_REGGUILINK_EDGESTROKE_PICKED , VisualizationConstants.DEFAULT_REGGUILINK_EDGESTROKE_PICKED);
+                final Paint color = link.isDown() ? VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_FAILED : VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_FAILED;
+                gl.setEdgeDrawPaint(color);
+                gl.setShownSeparated(true);
+            }
+            for (Node node : pickedSRG.getNodes())
+            {
+                for (GUINode gn : getCanvasVerticallyStackedGUINodes(node))
+                {
+                    gn.setBorderPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_FAILED);
+                    gn.setFillPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_FAILED);
+                }
+            }
         }
     }
 
-    public void pickRoute(Route pickedRoute)
+    public void pickMulticastDemand(List<MulticastDemand> pickedDemands)
+    {
+        resetPickedState();
+        this.pickedElementType = NetworkElementType.MULTICAST_DEMAND;
+        this.pickedElementFR = null;
+        this.pickedElementNotFR = pickedDemands;
+        if (pickedDemands.size() == 1) pickTimeLineManager.addElement(this.getNetPlan(), pickedDemands.get(0));
+
+        for (MulticastDemand pickedDemand : pickedDemands)
+        {
+            final boolean isDemandLayerVisibleInTheCanvas = isLayerVisibleInCanvas(pickedDemand.getLayer());
+            final GUINode gnOrigin = getCanvasAssociatedGUINode(pickedDemand.getIngressNode(), pickedDemand.getLayer());
+            Set<Link> linksThisLayer = null;
+            for (Node egressNode : pickedDemand.getEgressNodes())
+            {
+                final GUINode gnDestination = getCanvasAssociatedGUINode(egressNode, pickedDemand.getLayer());
+                if (showInCanvasThisLayerPropagation && isDemandLayerVisibleInTheCanvas)
+                {
+                    linksThisLayer = pickedDemand.getLinksThisLayerPotentiallyCarryingTraffic(egressNode, false);
+                    drawColateralLinks(linksThisLayer, VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
+                }
+                if (showInCanvasLowerLayerPropagation && (this.getNetPlan().getNumberOfLayers() > 1))
+                {
+                    if (linksThisLayer == null)
+                        linksThisLayer = pickedDemand.getLinksThisLayerPotentiallyCarryingTraffic(egressNode, false);
+                    final Pair<Set<Demand>, Set<Pair<MulticastDemand, Node>>> downLayerInfo = getDownCoupling(linksThisLayer);
+                    final InterLayerPropagationGraph ipg = new InterLayerPropagationGraph(downLayerInfo.getFirst(), null, downLayerInfo.getSecond(), false, false);
+                    final Set<Link> linksLowerLayers = ipg.getLinksInGraph();
+                    drawColateralLinks(linksLowerLayers, VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
+                    drawDownPropagationInterLayerLinks(linksLowerLayers, VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
+                }
+                if (showInCanvasUpperLayerPropagation && (this.getNetPlan().getNumberOfLayers() > 1) && pickedDemand.isCoupled())
+                {
+                    final Set<Link> upCoupledLink = getUpCoupling(null, Collections.singleton(Pair.of(pickedDemand, egressNode)));
+                    final InterLayerPropagationGraph ipg = new InterLayerPropagationGraph(null, upCoupledLink, null, true, false);
+                    drawColateralLinks(ipg.getLinksInGraph(), VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
+                    drawDownPropagationInterLayerLinks(ipg.getLinksInGraph(), VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
+                }
+                /* Picked link the last, so overrides the rest */
+                if (isDemandLayerVisibleInTheCanvas)
+                {
+                    gnDestination.setBorderPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_ENDFLOW);
+                    gnDestination.setFillPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_ENDFLOW);
+                }
+            }
+            /* Picked link the last, so overrides the rest */
+            if (isDemandLayerVisibleInTheCanvas)
+            {
+                gnOrigin.setBorderPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_ORIGINFLOW);
+                gnOrigin.setFillPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_ORIGINFLOW);
+            }
+        }
+        	
+    }
+
+    public void pickRoute(List<Route> pickedRoutes)
     {
         resetPickedState();
         this.pickedElementType = NetworkElementType.ROUTE;
         this.pickedElementFR = null;
-        this.pickedElementNotFR = pickedRoute;
-        pickTimeLineManager.addElement(this.getNetPlan(), pickedRoute);
+        this.pickedElementNotFR = pickedRoutes;
+        if (pickedRoutes.size() == 1) pickTimeLineManager.addElement(this.getNetPlan(), pickedRoutes.get(0));
 
-        final boolean isRouteLayerVisibleInTheCanvas = isLayerVisibleInCanvas(pickedRoute.getLayer());
-        if (showInCanvasThisLayerPropagation && isRouteLayerVisibleInTheCanvas)
+        for (Route pickedRoute : pickedRoutes)
         {
-            final List<Link> linksPrimary = pickedRoute.getSeqLinks();
-            drawColateralLinks(linksPrimary, pickedRoute.isBackupRoute() ? VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_BACKUP : VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
-        }
-        if (showInCanvasLowerLayerPropagation && (this.getNetPlan().getNumberOfLayers() > 1))
-        {
-            final Pair<Set<Demand>, Set<Pair<MulticastDemand, Node>>> downInfo = getDownCoupling(pickedRoute.getSeqLinks());
-            final InterLayerPropagationGraph ipg = new InterLayerPropagationGraph(downInfo.getFirst(), null, downInfo.getSecond(), false, false);
-            drawColateralLinks(ipg.getLinksInGraph(), pickedRoute.isBackupRoute() ? VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_BACKUP : VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
-            drawDownPropagationInterLayerLinks(ipg.getLinksInGraph(), pickedRoute.isBackupRoute() ? VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_BACKUP : VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
-        }
-        if (showInCanvasUpperLayerPropagation && (this.getNetPlan().getNumberOfLayers() > 1) && pickedRoute.getDemand().isCoupled())
-        {
-            final InterLayerPropagationGraph ipg = new InterLayerPropagationGraph(null, Sets.newHashSet(pickedRoute.getDemand().getCoupledLink()), null, true, false);
-            drawColateralLinks(ipg.getLinksInGraph(), VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
-            drawDownPropagationInterLayerLinks(ipg.getLinksInGraph(), VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
-        }
-        /* Picked link the last, so overrides the rest */
-        if (isRouteLayerVisibleInTheCanvas)
-        {
-            final GUINode gnOrigin = getCanvasAssociatedGUINode(pickedRoute.getIngressNode(), pickedRoute.getLayer());
-            final GUINode gnDestination = getCanvasAssociatedGUINode(pickedRoute.getEgressNode(), pickedRoute.getLayer());
-            gnOrigin.setBorderPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_ORIGINFLOW);
-            gnOrigin.setFillPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_ORIGINFLOW);
-            gnDestination.setBorderPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_ENDFLOW);
-            gnDestination.setFillPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_ENDFLOW);
-        }
-    }
-
-    public void pickMulticastTree(MulticastTree pickedTree)
-    {
-        resetPickedState();
-        this.pickedElementType = NetworkElementType.MULTICAST_TREE;
-        this.pickedElementFR = null;
-        this.pickedElementNotFR = pickedTree;
-        pickTimeLineManager.addElement(this.getNetPlan(), pickedTree);
-
-        final boolean isTreeLayerVisibleInTheCanvas = isLayerVisibleInCanvas(pickedTree.getLayer());
-        final GUINode gnOrigin = getCanvasAssociatedGUINode(pickedTree.getIngressNode(), pickedTree.getLayer());
-        for (Node egressNode : pickedTree.getEgressNodes())
-        {
-            final GUINode gnDestination = getCanvasAssociatedGUINode(egressNode, pickedTree.getLayer());
-            if (showInCanvasThisLayerPropagation && isTreeLayerVisibleInTheCanvas)
+            final boolean isRouteLayerVisibleInTheCanvas = isLayerVisibleInCanvas(pickedRoute.getLayer());
+            if (showInCanvasThisLayerPropagation && isRouteLayerVisibleInTheCanvas)
             {
-                final List<Link> linksPrimary = pickedTree.getSeqLinksToEgressNode(egressNode);
-                drawColateralLinks(linksPrimary, VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
+                final List<Link> linksPrimary = pickedRoute.getSeqLinks();
+                drawColateralLinks(linksPrimary, pickedRoute.isBackupRoute() ? VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_BACKUP : VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
             }
             if (showInCanvasLowerLayerPropagation && (this.getNetPlan().getNumberOfLayers() > 1))
             {
-                final Pair<Set<Demand>, Set<Pair<MulticastDemand, Node>>> downInfo = getDownCoupling(pickedTree.getSeqLinksToEgressNode(egressNode));
+                final Pair<Set<Demand>, Set<Pair<MulticastDemand, Node>>> downInfo = getDownCoupling(pickedRoute.getSeqLinks());
                 final InterLayerPropagationGraph ipg = new InterLayerPropagationGraph(downInfo.getFirst(), null, downInfo.getSecond(), false, false);
+                drawColateralLinks(ipg.getLinksInGraph(), pickedRoute.isBackupRoute() ? VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_BACKUP : VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
+                drawDownPropagationInterLayerLinks(ipg.getLinksInGraph(), pickedRoute.isBackupRoute() ? VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_BACKUP : VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
+            }
+            if (showInCanvasUpperLayerPropagation && (this.getNetPlan().getNumberOfLayers() > 1) && pickedRoute.getDemand().isCoupled())
+            {
+                final InterLayerPropagationGraph ipg = new InterLayerPropagationGraph(null, Sets.newHashSet(pickedRoute.getDemand().getCoupledLink()), null, true, false);
                 drawColateralLinks(ipg.getLinksInGraph(), VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
                 drawDownPropagationInterLayerLinks(ipg.getLinksInGraph(), VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
             }
-            if (showInCanvasUpperLayerPropagation && (this.getNetPlan().getNumberOfLayers() > 1) && pickedTree.getMulticastDemand().isCoupled())
+            /* Picked link the last, so overrides the rest */
+            if (isRouteLayerVisibleInTheCanvas)
             {
-                final Set<Link> upperCoupledLink = getUpCoupling(null, Arrays.asList(Pair.of(pickedTree.getMulticastDemand(), egressNode)));
-                final InterLayerPropagationGraph ipg = new InterLayerPropagationGraph(null, upperCoupledLink, null, true, false);
-                drawColateralLinks(ipg.getLinksInGraph(), VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
-                drawDownPropagationInterLayerLinks(ipg.getLinksInGraph(), VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
-            }
-            if (isTreeLayerVisibleInTheCanvas)
-            {
+                final GUINode gnOrigin = getCanvasAssociatedGUINode(pickedRoute.getIngressNode(), pickedRoute.getLayer());
+                final GUINode gnDestination = getCanvasAssociatedGUINode(pickedRoute.getEgressNode(), pickedRoute.getLayer());
+                gnOrigin.setBorderPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_ORIGINFLOW);
+                gnOrigin.setFillPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_ORIGINFLOW);
                 gnDestination.setBorderPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_ENDFLOW);
                 gnDestination.setFillPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_ENDFLOW);
             }
         }
-		/* Picked link the last, so overrides the rest */
-        if (isTreeLayerVisibleInTheCanvas)
+    }
+
+    public void pickMulticastTree(List<MulticastTree> pickedTrees)
+    {
+        resetPickedState();
+        this.pickedElementType = NetworkElementType.MULTICAST_TREE;
+        this.pickedElementFR = null;
+        this.pickedElementNotFR = pickedTrees;
+        if (pickedTrees.size() == 1) pickTimeLineManager.addElement(this.getNetPlan(), pickedTrees.get(0));
+
+        for (MulticastTree pickedTree : pickedTrees)
         {
-            gnOrigin.setBorderPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_ORIGINFLOW);
-            gnOrigin.setFillPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_ORIGINFLOW);
+            final boolean isTreeLayerVisibleInTheCanvas = isLayerVisibleInCanvas(pickedTree.getLayer());
+            final GUINode gnOrigin = getCanvasAssociatedGUINode(pickedTree.getIngressNode(), pickedTree.getLayer());
+            for (Node egressNode : pickedTree.getEgressNodes())
+            {
+                final GUINode gnDestination = getCanvasAssociatedGUINode(egressNode, pickedTree.getLayer());
+                if (showInCanvasThisLayerPropagation && isTreeLayerVisibleInTheCanvas)
+                {
+                    final List<Link> linksPrimary = pickedTree.getSeqLinksToEgressNode(egressNode);
+                    drawColateralLinks(linksPrimary, VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
+                }
+                if (showInCanvasLowerLayerPropagation && (this.getNetPlan().getNumberOfLayers() > 1))
+                {
+                    final Pair<Set<Demand>, Set<Pair<MulticastDemand, Node>>> downInfo = getDownCoupling(pickedTree.getSeqLinksToEgressNode(egressNode));
+                    final InterLayerPropagationGraph ipg = new InterLayerPropagationGraph(downInfo.getFirst(), null, downInfo.getSecond(), false, false);
+                    drawColateralLinks(ipg.getLinksInGraph(), VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
+                    drawDownPropagationInterLayerLinks(ipg.getLinksInGraph(), VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
+                }
+                if (showInCanvasUpperLayerPropagation && (this.getNetPlan().getNumberOfLayers() > 1) && pickedTree.getMulticastDemand().isCoupled())
+                {
+                    final Set<Link> upperCoupledLink = getUpCoupling(null, Arrays.asList(Pair.of(pickedTree.getMulticastDemand(), egressNode)));
+                    final InterLayerPropagationGraph ipg = new InterLayerPropagationGraph(null, upperCoupledLink, null, true, false);
+                    drawColateralLinks(ipg.getLinksInGraph(), VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
+                    drawDownPropagationInterLayerLinks(ipg.getLinksInGraph(), VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
+                }
+                if (isTreeLayerVisibleInTheCanvas)
+                {
+                    gnDestination.setBorderPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_ENDFLOW);
+                    gnDestination.setFillPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_ENDFLOW);
+                }
+            }
+    		/* Picked link the last, so overrides the rest */
+            if (isTreeLayerVisibleInTheCanvas)
+            {
+                gnOrigin.setBorderPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_ORIGINFLOW);
+                gnOrigin.setFillPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_ORIGINFLOW);
+            }
         }
     }
 
-    public void pickLink(Link pickedLink)
+    public void pickLink(List<Link> pickedLinks)
     {
         resetPickedState();
         this.pickedElementType = NetworkElementType.LINK;
         this.pickedElementFR = null;
-        this.pickedElementNotFR = pickedLink;
-        pickTimeLineManager.addElement(this.getNetPlan(), pickedLink);
+        this.pickedElementNotFR = pickedLinks;
+        if (pickedLinks.size() == 1) pickTimeLineManager.addElement(this.getNetPlan(), pickedLinks.get(0));
 
-        final boolean isLinkLayerVisibleInTheCanvas = isLayerVisibleInCanvas(pickedLink.getLayer());
-        Triple<Map<Demand, Set<Link>>, Map<Demand, Set<Link>>, Map<Pair<MulticastDemand, Node>, Set<Link>>> thisLayerTraversalInfo = null;
-        if (showInCanvasThisLayerPropagation && isLinkLayerVisibleInTheCanvas)
+        for (Link pickedLink : pickedLinks)
         {
-            thisLayerTraversalInfo = pickedLink.getLinksThisLayerPotentiallyCarryingTrafficTraversingThisLink(false);
-            final Set<Link> linksPrimary = thisLayerTraversalInfo.getFirst().values().stream().flatMap(set -> set.stream()).collect(Collectors.toSet());
-            final Set<Link> linksBackup = thisLayerTraversalInfo.getSecond().values().stream().flatMap(set -> set.stream()).collect(Collectors.toSet());
-            final Set<Link> linksMulticast = thisLayerTraversalInfo.getThird().values().stream().flatMap(set -> set.stream()).collect(Collectors.toSet());
-            drawColateralLinks(Sets.union(Sets.union(linksPrimary, linksBackup), linksMulticast), VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
-        }
-        if (showInCanvasLowerLayerPropagation && (this.getNetPlan().getNumberOfLayers() > 1) && pickedLink.isCoupled())
-        {
-            final Pair<Set<Demand>, Set<Pair<MulticastDemand, Node>>> downLayerInfo = getDownCoupling(Arrays.asList(pickedLink));
-            final InterLayerPropagationGraph ipg = new InterLayerPropagationGraph(downLayerInfo.getFirst(), null, downLayerInfo.getSecond(), false, false);
-            drawColateralLinks(ipg.getLinksInGraph(), VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
-            drawDownPropagationInterLayerLinks(ipg.getLinksInGraph(), VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
-        }
-        if (showInCanvasUpperLayerPropagation && (this.getNetPlan().getNumberOfLayers() > 1))
-        {
-            if (thisLayerTraversalInfo == null)
+            final boolean isLinkLayerVisibleInTheCanvas = isLayerVisibleInCanvas(pickedLink.getLayer());
+            Triple<Map<Demand, Set<Link>>, Map<Demand, Set<Link>>, Map<Pair<MulticastDemand, Node>, Set<Link>>> thisLayerTraversalInfo = null;
+            if (showInCanvasThisLayerPropagation && isLinkLayerVisibleInTheCanvas)
+            {
                 thisLayerTraversalInfo = pickedLink.getLinksThisLayerPotentiallyCarryingTrafficTraversingThisLink(false);
-            final Set<Demand> demandsPrimaryAndBackup = Sets.union(thisLayerTraversalInfo.getFirst().keySet(), thisLayerTraversalInfo.getSecond().keySet());
-            final Set<Pair<MulticastDemand, Node>> mDemands = thisLayerTraversalInfo.getThird().keySet();
-            final Set<Link> initialUpperLinks = getUpCoupling(demandsPrimaryAndBackup, mDemands);
-            final InterLayerPropagationGraph ipg = new InterLayerPropagationGraph(null, Sets.newHashSet(initialUpperLinks), null, true, false);
-            drawColateralLinks(ipg.getLinksInGraph(), VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
-            drawDownPropagationInterLayerLinks(ipg.getLinksInGraph(), VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
-        }
-		/* Picked link the last, so overrides the rest */
-        if (isLinkLayerVisibleInTheCanvas)
-        {
-            final GUILink gl = getCanvasAssociatedGUILink(pickedLink);
-            gl.setHasArrow(true);
-            setCurrentDefaultEdgeStroke (gl , VisualizationConstants.DEFAULT_REGGUILINK_EDGESTROKE_PICKED , VisualizationConstants.DEFAULT_REGGUILINK_EDGESTROKE_PICKED);
-            final Paint color = pickedLink.isDown() ? VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_FAILED : VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED;
-            gl.setEdgeDrawPaint(color);
-            gl.setShownSeparated(true);
+                final Set<Link> linksPrimary = thisLayerTraversalInfo.getFirst().values().stream().flatMap(set -> set.stream()).collect(Collectors.toSet());
+                final Set<Link> linksBackup = thisLayerTraversalInfo.getSecond().values().stream().flatMap(set -> set.stream()).collect(Collectors.toSet());
+                final Set<Link> linksMulticast = thisLayerTraversalInfo.getThird().values().stream().flatMap(set -> set.stream()).collect(Collectors.toSet());
+                drawColateralLinks(Sets.union(Sets.union(linksPrimary, linksBackup), linksMulticast), VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
+            }
+            if (showInCanvasLowerLayerPropagation && (this.getNetPlan().getNumberOfLayers() > 1) && pickedLink.isCoupled())
+            {
+                final Pair<Set<Demand>, Set<Pair<MulticastDemand, Node>>> downLayerInfo = getDownCoupling(Arrays.asList(pickedLink));
+                final InterLayerPropagationGraph ipg = new InterLayerPropagationGraph(downLayerInfo.getFirst(), null, downLayerInfo.getSecond(), false, false);
+                drawColateralLinks(ipg.getLinksInGraph(), VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
+                drawDownPropagationInterLayerLinks(ipg.getLinksInGraph(), VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
+            }
+            if (showInCanvasUpperLayerPropagation && (this.getNetPlan().getNumberOfLayers() > 1))
+            {
+                if (thisLayerTraversalInfo == null)
+                    thisLayerTraversalInfo = pickedLink.getLinksThisLayerPotentiallyCarryingTrafficTraversingThisLink(false);
+                final Set<Demand> demandsPrimaryAndBackup = Sets.union(thisLayerTraversalInfo.getFirst().keySet(), thisLayerTraversalInfo.getSecond().keySet());
+                final Set<Pair<MulticastDemand, Node>> mDemands = thisLayerTraversalInfo.getThird().keySet();
+                final Set<Link> initialUpperLinks = getUpCoupling(demandsPrimaryAndBackup, mDemands);
+                final InterLayerPropagationGraph ipg = new InterLayerPropagationGraph(null, Sets.newHashSet(initialUpperLinks), null, true, false);
+                drawColateralLinks(ipg.getLinksInGraph(), VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
+                drawDownPropagationInterLayerLinks(ipg.getLinksInGraph(), VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
+            }
+    		/* Picked link the last, so overrides the rest */
+            if (isLinkLayerVisibleInTheCanvas)
+            {
+                final GUILink gl = getCanvasAssociatedGUILink(pickedLink);
+                gl.setHasArrow(true);
+                setCurrentDefaultEdgeStroke (gl , VisualizationConstants.DEFAULT_REGGUILINK_EDGESTROKE_PICKED , VisualizationConstants.DEFAULT_REGGUILINK_EDGESTROKE_PICKED);
+                final Paint color = pickedLink.isDown() ? VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_FAILED : VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED;
+                gl.setEdgeDrawPaint(color);
+                gl.setShownSeparated(true);
+            }
         }
     }
 
-    public void pickNode(Node pickedNode)
+    public void pickNode(List<Node> pickedNodes)
     {
         resetPickedState();
         this.pickedElementType = NetworkElementType.NODE;
         this.pickedElementFR = null;
-        this.pickedElementNotFR = pickedNode;
-        pickTimeLineManager.addElement(this.getNetPlan(), pickedNode);
+        this.pickedElementNotFR = pickedNodes;
+        if (pickedNodes.size() == 1) pickTimeLineManager.addElement(this.getNetPlan(), pickedNodes.get(0));
 
-        for (GUINode gn : getCanvasVerticallyStackedGUINodes(pickedNode))
+        for (Node pickedNode : pickedNodes)
         {
-            gn.setBorderPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_PICK);
-            gn.setFillPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_PICK);
-        }
-        for (Link e : Sets.union(pickedNode.getOutgoingLinks(this.getNetPlan().getNetworkLayerDefault()), pickedNode.getIncomingLinks(this.getNetPlan().getNetworkLayerDefault())))
-        {
-            final GUILink gl = getCanvasAssociatedGUILink(e);
-            gl.setShownSeparated(true);
-            gl.setHasArrow(true);
+            for (GUINode gn : getCanvasVerticallyStackedGUINodes(pickedNode))
+            {
+                gn.setBorderPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_PICK);
+                gn.setFillPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_PICK);
+            }
+            for (Link e : Sets.union(pickedNode.getOutgoingLinks(this.getNetPlan().getNetworkLayerDefault()), pickedNode.getIncomingLinks(this.getNetPlan().getNetworkLayerDefault())))
+            {
+                final GUILink gl = getCanvasAssociatedGUILink(e);
+                gl.setShownSeparated(true);
+                gl.setHasArrow(true);
+            }
         }
     }
 
-    public void pickResource(Resource pickedResource)
+    public void pickResource(List<Resource> pickedResources)
     {
         resetPickedState();
         this.pickedElementType = NetworkElementType.RESOURCE;
         this.pickedElementFR = null;
-        this.pickedElementNotFR = pickedResource;
-        pickTimeLineManager.addElement(this.getNetPlan(), pickedResource);
+        this.pickedElementNotFR = pickedResources;
+        if (pickedResources.size() == 1) pickTimeLineManager.addElement(this.getNetPlan(), pickedResources.get(0));
 
-        for (GUINode gn : getCanvasVerticallyStackedGUINodes(pickedResource.getHostNode()))
+        for (Resource pickedResource : pickedResources)
         {
-            gn.setBorderPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_RESOURCE);
-            gn.setFillPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_RESOURCE);
+            for (GUINode gn : getCanvasVerticallyStackedGUINodes(pickedResource.getHostNode()))
+            {
+                gn.setBorderPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_RESOURCE);
+                gn.setFillPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_RESOURCE);
+            }
         }
     }
 
-    public void pickForwardingRule(Pair<Demand, Link> pickedFR)
+    public void pickForwardingRule(List<Pair<Demand, Link>> pickedFRs)
     {
         resetPickedState();
         this.pickedElementType = NetworkElementType.FORWARDING_RULE;
-        this.pickedElementFR = pickedFR;
+        this.pickedElementFR = pickedFRs;
         this.pickedElementNotFR = null;
-        pickTimeLineManager.addElement(this.getNetPlan(), pickedFR);
+        if (pickedFRs.size() == 1) pickTimeLineManager.addElement(this.getNetPlan(), pickedFRs.get(0));
 
-        final boolean isFRLayerVisibleInTheCanvas = isLayerVisibleInCanvas(pickedFR.getFirst().getLayer());
-        final Demand pickedDemand = pickedFR.getFirst();
-        final Link pickedLink = pickedFR.getSecond();
-        if (showInCanvasThisLayerPropagation && isFRLayerVisibleInTheCanvas)
+        for (Pair<Demand,Link> pickedFR : pickedFRs)
         {
-            final Triple<Map<Demand, Set<Link>>, Map<Demand, Set<Link>>, Map<Pair<MulticastDemand, Node>, Set<Link>>> triple =
-                    pickedLink.getLinksThisLayerPotentiallyCarryingTrafficTraversingThisLink(false);
-            final Set<Link> linksPrimary = triple.getFirst().get(pickedDemand);
-            final Set<Link> linksBackup = triple.getSecond().get(pickedDemand);
-            drawColateralLinks(Sets.union(linksPrimary, linksBackup), VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
+            final boolean isFRLayerVisibleInTheCanvas = isLayerVisibleInCanvas(pickedFR.getFirst().getLayer());
+            final Demand pickedDemand = pickedFR.getFirst();
+            final Link pickedLink = pickedFR.getSecond();
+            if (showInCanvasThisLayerPropagation && isFRLayerVisibleInTheCanvas)
+            {
+                final Triple<Map<Demand, Set<Link>>, Map<Demand, Set<Link>>, Map<Pair<MulticastDemand, Node>, Set<Link>>> triple =
+                        pickedLink.getLinksThisLayerPotentiallyCarryingTrafficTraversingThisLink(false);
+                final Set<Link> linksPrimary = triple.getFirst().get(pickedDemand);
+                final Set<Link> linksBackup = triple.getSecond().get(pickedDemand);
+                drawColateralLinks(Sets.union(linksPrimary, linksBackup), VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
+            }
+            if (showInCanvasLowerLayerPropagation && (this.getNetPlan().getNumberOfLayers() > 1) && pickedLink.isCoupled())
+            {
+                final Pair<Set<Demand>, Set<Pair<MulticastDemand, Node>>> downLayerInfo = getDownCoupling(Arrays.asList(pickedLink));
+                final InterLayerPropagationGraph ipgCausedByLink = new InterLayerPropagationGraph(downLayerInfo.getFirst(), null, downLayerInfo.getSecond(), false, false);
+                final Set<Link> frPropagationLinks = ipgCausedByLink.getLinksInGraph();
+                drawColateralLinks(frPropagationLinks, VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
+                drawDownPropagationInterLayerLinks(frPropagationLinks, VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
+            }
+            if (showInCanvasUpperLayerPropagation && (this.getNetPlan().getNumberOfLayers() > 1) && pickedDemand.isCoupled())
+            {
+                final InterLayerPropagationGraph ipgCausedByDemand = new InterLayerPropagationGraph(null, Sets.newHashSet(pickedDemand.getCoupledLink()), null, true, false);
+                final Set<Link> frPropagationLinks = ipgCausedByDemand.getLinksInGraph();
+                drawColateralLinks(frPropagationLinks, VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
+                drawDownPropagationInterLayerLinks(frPropagationLinks, VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
+            }
+    		/* Picked link the last, so overrides the rest */
+            if (isFRLayerVisibleInTheCanvas)
+            {
+                final GUILink gl = getCanvasAssociatedGUILink(pickedLink);
+                gl.setHasArrow(true);
+                setCurrentDefaultEdgeStroke (gl , VisualizationConstants.DEFAULT_REGGUILINK_EDGESTROKE_PICKED , VisualizationConstants.DEFAULT_REGGUILINK_EDGESTROKE_PICKED);
+                final Paint color = pickedLink.isDown() ? VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_FAILED : VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED;
+                gl.setEdgeDrawPaint(color);
+                gl.setShownSeparated(true);
+                gl.getOriginNode().setBorderPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_ORIGINFLOW);
+                gl.getOriginNode().setFillPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_ORIGINFLOW);
+                gl.getDestinationNode().setBorderPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_ENDFLOW);
+                gl.getDestinationNode().setFillPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_ENDFLOW);
+            }
         }
-        if (showInCanvasLowerLayerPropagation && (this.getNetPlan().getNumberOfLayers() > 1) && pickedLink.isCoupled())
-        {
-            final Pair<Set<Demand>, Set<Pair<MulticastDemand, Node>>> downLayerInfo = getDownCoupling(Arrays.asList(pickedLink));
-            final InterLayerPropagationGraph ipgCausedByLink = new InterLayerPropagationGraph(downLayerInfo.getFirst(), null, downLayerInfo.getSecond(), false, false);
-            final Set<Link> frPropagationLinks = ipgCausedByLink.getLinksInGraph();
-            drawColateralLinks(frPropagationLinks, VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
-            drawDownPropagationInterLayerLinks(frPropagationLinks, VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
-        }
-        if (showInCanvasUpperLayerPropagation && (this.getNetPlan().getNumberOfLayers() > 1) && pickedDemand.isCoupled())
-        {
-            final InterLayerPropagationGraph ipgCausedByDemand = new InterLayerPropagationGraph(null, Sets.newHashSet(pickedDemand.getCoupledLink()), null, true, false);
-            final Set<Link> frPropagationLinks = ipgCausedByDemand.getLinksInGraph();
-            drawColateralLinks(frPropagationLinks, VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
-            drawDownPropagationInterLayerLinks(frPropagationLinks, VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED);
-        }
-		/* Picked link the last, so overrides the rest */
-        if (isFRLayerVisibleInTheCanvas)
-        {
-            final GUILink gl = getCanvasAssociatedGUILink(pickedLink);
-            gl.setHasArrow(true);
-            setCurrentDefaultEdgeStroke (gl , VisualizationConstants.DEFAULT_REGGUILINK_EDGESTROKE_PICKED , VisualizationConstants.DEFAULT_REGGUILINK_EDGESTROKE_PICKED);
-            final Paint color = pickedLink.isDown() ? VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_FAILED : VisualizationConstants.DEFAULT_REGGUILINK_EDGECOLOR_PICKED;
-            gl.setEdgeDrawPaint(color);
-            gl.setShownSeparated(true);
-            gl.getOriginNode().setBorderPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_ORIGINFLOW);
-            gl.getOriginNode().setFillPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_ORIGINFLOW);
-            gl.getDestinationNode().setBorderPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_ENDFLOW);
-            gl.getDestinationNode().setFillPaint(VisualizationConstants.DEFAULT_GUINODE_COLOR_ENDFLOW);
-        }
+        	
     }
 
-    public void pickElement(NetworkElement e)
+    public void pickElement(List<? extends NetworkElement> es)
     {
-        if (e instanceof Node) pickNode((Node) e);
-        else if (e instanceof Link) pickLink((Link) e);
-        else if (e instanceof Demand) pickDemand((Demand) e);
-        else if (e instanceof Route) pickRoute((Route) e);
-        else if (e instanceof MulticastDemand) pickMulticastDemand((MulticastDemand) e);
-        else if (e instanceof MulticastTree) pickMulticastTree((MulticastTree) e);
-        else if (e instanceof Resource) pickResource((Resource) e);
-        else if (e instanceof SharedRiskGroup) pickSRG((SharedRiskGroup) e);
+        if (es.get(0) instanceof Node) pickNode((List<Node>) es);
+        else if (es.get(0) instanceof Link) pickLink((List<Link>) es);
+        else if (es.get(0) instanceof Demand) pickDemand((List<Demand>) es);
+        else if (es.get(0) instanceof Route) pickRoute((List<Route>) es);
+        else if (es.get(0) instanceof MulticastDemand) pickMulticastDemand((List<MulticastDemand>) es);
+        else if (es.get(0) instanceof MulticastTree) pickMulticastTree((List<MulticastTree>) es);
+        else if (es.get(0) instanceof Resource) pickResource((List<Resource>) es);
+        else if (es.get(0) instanceof SharedRiskGroup) pickSRG((List<SharedRiskGroup>) es);
         else throw new RuntimeException();
     }
 
@@ -1469,11 +1499,13 @@ public class VisualizationState
             if (e.getNetPlan() != np) throw new RuntimeException();
         for (List<GUINode> list : vs.cache_mapNode2ListVerticallyStackedGUINodes.values())
             for (GUINode gn : list) if (gn.getAssociatedNode().getNetPlan() != np) throw new RuntimeException();
-        if (vs.pickedElementNotFR != null) if (vs.pickedElementNotFR.getNetPlan() != np) throw new RuntimeException();
+        if (vs.pickedElementNotFR != null) if (!vs.pickedElementNotFR.isEmpty()) if (vs.pickedElementNotFR.get(0).getNetPlan() != np) throw new RuntimeException();
         if (vs.pickedElementFR != null)
-            if (vs.pickedElementFR.getFirst().getNetPlan() != np) throw new RuntimeException();
-        if (vs.pickedElementFR != null)
-            if (vs.pickedElementFR.getSecond().getNetPlan() != np) throw new RuntimeException();
+        	if (!vs.pickedElementFR.isEmpty())
+        	{
+        		if (vs.pickedElementFR.get(0).getFirst().getNetPlan() != np) throw new RuntimeException();
+                if (vs.pickedElementFR.get(0).getSecond().getNetPlan() != np) throw new RuntimeException();
+        	}
     }
     
     private static BasicStroke resizedBasicStroke (BasicStroke a , float multFactorSize)
